--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
+    <canvas id='canvas' width='128px' height='128px' style="position: absolute;"></canvas>
     <div id="root"></div>
   </body>
 </html>
